fixing dark mode

--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -828,7 +828,7 @@
             display: grid;
             grid-template-columns: repeat(12, 1fr);
             row-gap: (24/16rem);
-            column-gap: (12/16rem);
+            column-gap: (18/16rem);
         }
         
         .cs-stat {
